# wave-verifier

./: .clippy.toml  .gitignore  Cargo.toml  LICENSE  README.md  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.devcontainer/: devcontainer.json
program-libs/account-compression/src/: compression_algorithms.rs  compression_errors.rs  lib.rs
program-libs/hash-set/src/: hash_functions.rs  lib.rs  set_errors.rs
program-libs/merkle-tree/src/: batch.rs  errors.rs  lib.rs  queue.rs
programs/account-compression/: Cargo.toml
programs/account-compression/benches/: compression_benchmarks.rs
programs/account-compression/src/: error.rs  lib.rs  state.rs
programs/account-compression/tests/: integration_tests.rs
programs/registry/src/: constants.rs  error.rs  events.rs  lib.rs  processor.rs
programs/registry/src/instructions/: mod.rs
programs/registry/src/state/: flow_registry.rs  mod.rs  nullifier.rs  proof_log.rs
scripts/: deploy-devnet.sh  deploy-local.sh
tests/integration/: Cargo.toml
tests/integration/src/: compression_performance_tests.rs  lib.rs  security_tests.rs
