[workspace]
members = [
    "programs/wave-verifier",
    "sdk",
    "tests/integration",
]

[workspace.dependencies]
solana-program = "1.17"
solana-sdk = "1.17"
solana-client = "1.17"
solana-cli-config = "1.17"
solana-logger = "1.17"
borsh = "0.10"
thiserror = "1.0"
num-derive = "0.4"
num-traits = "0.2"
bytemuck = { version = "1.14", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
base64 = "0.21"
ark-ff = "0.4"
ark-ec = "0.4"
ark-bn254 = "0.4"
ark-groth16 = "0.4"
ark-serialize = "0.4"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[package]
name = "cloud-verifier"
version = "0.1.0"
edition = "2021"
description = "Cloud verifier program for zero-knowledge proof verification on Solana"
license = "MIT"

[features]
no-entrypoint = []

[dependencies]
solana-program = "1.17"
borsh = "0.10"
thiserror = "1.0"
num-derive = "0.4"
num-traits = "0.2"
bytemuck = { version = "1.14", features = ["derive"] }

[lib]
crate-type = ["cdylib", "lib"] 