[package]
name = "account-compression"
version = "0.1.0"
edition = "2021"
description = "Solana program for efficient account data compression"
authors = ["Your Name <your.email@example.com>"]

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
borsh = "0.10.3"
solana-program = "1.16"
thiserror = "1.0"
lz4-flex = "0.11"
snap = "1.1"
zstd = "0.13"
sha2 = "0.10"
rayon = "1.8"

[dev-dependencies]
solana-program-test = "1.16"
solana-sdk = "1.16"
tokio = { version = "1.32", features = ["full"] }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1 